fix customer name quote spacing

--- a/public/css/express-project.css
+++ b/public/css/express-project.css
@@ -72,3 +72,7 @@ li {
 	width: 500px;
 	height: 300px;
 }
+
+.customer-quote-name {
+	margin-left: 561px;
+}
